--- a/coco.html
+++ b/coco.html
@@ -34,7 +34,7 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
     // fetchs data using jinja
-    const inputData = {'name': 'root', 'children': [{'name': 'integrity_coverage_1_1', 'process': {'pid': '1_1', 'input': 'fastq', 'output': 'fastq', 'lane': 1, 'directives': 'integrity_coverage'}, 'children': [{'name': 'fastqc_trimmomatic_1_2', 'process': {'pid': '1_2', 'input': 'fastq', 'output': 'fastq', 'lane': 1, 'directives': 'fastqccpus: 2memory: 4GBcontainer: flowcraft/fastqcversion: 0.11.7-1trimmomaticcpus: 2memory: { 4.GB * task.attempt }container: flowcraft/trimmomaticversion: 0.36-1'}, 'children': []}]}]}
+    const inputData = {'name': 'root', 'children': [{'name': 'integrity_coverage_1_1', 'process': {'pid': '1_1', 'input': 'fastq', 'output': 'fastq', 'lane': 1, 'directives': 'integrity_coverage'}, 'children': [{'name': 'fastqc_trimmomatic_1_2', 'process': {'pid': '1_2', 'input': 'fastq', 'output': 'fastq', 'lane': 1, 'directives': 'fastqccpus: 2memory: 4GBcontainer: flowcraft/fastqcversion: 0.11.7-1trimmomaticcpus: 2memory: { 4.GB * task.attempt }container: flowcraft/trimmomaticversion: 0.36-1'}, 'children': [{'name': 'spades_1_3', 'process': {'pid': '1_3', 'input': 'fastq', 'output': 'fasta', 'lane': 1, 'directives': 'spadescpus: 4memory: { 5.GB * task.attempt }container: flowcraft/spadesversion: 3.13.0-1scratch: true'}, 'children': []}]}]}]}
 
     /**
      * This function creates a tooltip with the node/process information
